# nonebot-plugin-osubot-addon

./: .gitignore  README.md  __init__.py  config.py  country_rank.py  main.py  models.py  pyproject.toml  utils.py
osu_network/: __init__.py  mods.py  pp.py
